[tool.poetry]
name = "nefrociencia"
version = "0.1.0"
description = "Proyectos de investigación en Nefrología."
authors = ["Andreina Martínez Paulino"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.3.4"
matplotlib = "3.5.0"
ipykernel = "6.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
